[package]
name = "ch04_01"
version = "0.1.0"
edition = "2024"

[dependencies]
async-task = "4.4.0"
futures-lite = "1.12.0"
once_cell = "1.17.1"
flume = "0.10.14"
hyper = { version = "0.14.26", features = ["http1", "http2", "client", "runtime"]}
smol = "1.3.0"
anyhow = "1.0.71"
async-native-tls = "0.5.0"
http = "0.2.9"
tokio = {workspace = true}